--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -46,6 +46,11 @@ body {
   width: 60%;
 }
 
+.border {
+  border: 1px solid var(--border_color) !important;
+  border-radius: 5px;
+}
+
 /* ----------------text----------------- */
 p {
   margin: 0;
@@ -119,6 +124,8 @@ h6 {
 
 img {
   width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
 .item-img-small {
@@ -166,7 +173,7 @@ img {
 /* -------------input------------- */
 input {
   width: calc(100% - 30px);
-  padding: 10px 15px;
+  padding: 7px 15px;
   border-radius: 20px;
   border: 1px solid var(--border_color);
 }
